# comptonmod

./: .gitignore  AUTHORS  COPYING-PLAIN  Makefile.am  README  README.md  compton.conf  configure.ac  e-module-comptonmod.edc  e_modules-comptonmod.spec.in  meson.build  module.desktop  module.desktop.in
data/: Makefile.am  meson.build
data/etc/: Makefile.am  meson.build  picom.conf  picom.conf.in
data/images/: meson.build
src/: e_mod_main.c
